244Initials/force-app/main/default/objects/Account/fields/ARTL_Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Billing_Account_Number__c</fullName>
    <displayFormat>BL-{00000000}</displayFormat>
    <label>Billing Account Number</label>
    <type>AutoNumber</type>
</CustomField>