244Initials/force-app/main/default/objects/Account/fields/ARTL_Billing_Pincode__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Billing_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Pincode</label>
    <referenceTo>ARTL_Pincode__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>