244Initials/force-app/main/default/objects/Account/fields/ARTL_Business_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Business_Account_Number__c</fullName>
    <displayFormat>BS-{00000000}</displayFormat>
    <label>Business Account Number</label>
    <type>AutoNumber</type>
</CustomField>