244Initials/force-app/main/default/objects/Account/fields/ARTL_Business_Circle_Region__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Business_Circle_Region__c</fullName>
    <label>Business Circle/ Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ARTL_Customer_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>CIS</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>GUJ</fullName>
            </value>
            <value>
                <fullName>India International</fullName>
            </value>
            <value>
                <fullName>KK</fullName>
            </value>
            <value>
                <fullName>KTN</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>MPCG</fullName>
            </value>
            <value>
                <fullName>MUM</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>NESA</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>RAJ</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>SAARC</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>UN</fullName>
            </value>
            <value>
                <fullName>UPE</fullName>
            </value>
            <value>
                <fullName>UPW</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>WBO</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>