244Initials/force-app/main/default/objects/Account/fields/ARTL_CIN_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_CIN_Number__c</fullName>
    <label>CIN Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>