244Initials/force-app/main/default/objects/Account/fields/ARTL_CO_Care_Of__c.field-meta.xml
<CustomField>
    <fullName>ARTL_CO_Care_Of__c</fullName>
    <label>CO (Care Of)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>