244Initials/force-app/main/default/objects/Account/fields/ARTL_Collection_Manager__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Collection_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collection_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>