244Initials/force-app/main/default/objects/Account/fields/ARTL_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Country_Code__c</fullName>
    <defaultValue>TEXT(91)</defaultValue>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code</valueSetName>
    </valueSet>
</CustomField>