244Initials/force-app/main/default/objects/Account/fields/ARTL_DSG_Owner__c.field-meta.xml
<CustomField>
    <fullName>ARTL_DSG_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DSG Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DSG_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>