244Initials/force-app/main/default/objects/Account/fields/ARTL_GST_IN__c.field-meta.xml
<CustomField>
    <fullName>ARTL_GST_IN__c</fullName>
    <label>GST IN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>