244Initials/force-app/main/default/objects/Account/fields/ARTL_Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Identification_Type__c</fullName>
    <label>Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>TAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>