244Initials/force-app/main/default/objects/Account/fields/ARTL_Is_DMU__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Is_DMU__c</fullName>
    <label>Is DMU?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMU</fullName>
            </value>
            <value>
                <fullName>Non DMU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>