244Initials/force-app/main/default/objects/Account/fields/ARTL_Is_GST_Verified__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Is_GST_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is GST Verified</label>
    <type>Checkbox</type>
</CustomField>