244Initials/force-app/main/default/objects/Account/fields/ARTL_IsPANVerified__c.field-meta.xml
<CustomField>
    <fullName>ARTL_IsPANVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPANVerified?</label>
    <type>Checkbox</type>
</CustomField>