244Initials/force-app/main/default/objects/Account/fields/ARTL_Owner_OLM_Id__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Owner_OLM_Id__c</fullName>
    <label>Owner OLM Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>