244Initials/force-app/main/default/objects/Account/fields/ARTL_PAN__c.field-meta.xml
<CustomField>
    <fullName>ARTL_PAN__c</fullName>
    <label>PAN</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>