244Initials/force-app/main/default/objects/Account/fields/ARTL_Parent_DMU__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Parent_DMU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent DMU</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Parent DMU)</relationshipLabel>
    <relationshipName>Parent_DMUs</relationshipName>
    <type>Lookup</type>
</CustomField>