244Initials/force-app/main/default/objects/Account/fields/ARTL_PPI__c.field-meta.xml
<CustomField>
    <fullName>ARTL_PPI__c</fullName>
    <label>Product Penetration Index</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>