244Initials/force-app/main/default/objects/Account/fields/ARTL_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>