244Initials/force-app/main/default/objects/Account/fields/ARTL_TAN__c.field-meta.xml
<CustomField>
    <fullName>ARTL_TAN__c</fullName>
    <label>TAN</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>