244Initials/force-app/main/default/objects/Account/fields/ARTL_TL__c.field-meta.xml
<CustomField>
    <fullName>ARTL_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TLs</relationshipName>
    <type>Lookup</type>
</CustomField>