244Initials/force-app/main/default/objects/Account/fields/ARTL_TL_OLM_Id__c.field-meta.xml
<CustomField>
    <fullName>ARTL_TL_OLM_Id__c</fullName>
    <label>TL OLM Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>