244Initials/force-app/main/default/objects/Account/fields/ARTL_Vertical_Segment__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Vertical_Segment__c</fullName>
    <label>Vertical Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ARTL_Customer_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BFI</fullName>
            </value>
            <value>
                <fullName>BFSI</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
            </value>
            <value>
                <fullName>Calling Card Operator</fullName>
            </value>
            <value>
                <fullName>Channels</fullName>
            </value>
            <value>
                <fullName>Digital Media</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Govt/PSU</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>IBS</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>IT/ITES</fullName>
            </value>
            <value>
                <fullName>IT &amp; Telecom</fullName>
            </value>
            <value>
                <fullName>ITES</fullName>
            </value>
            <value>
                <fullName>M&amp;D</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Media &amp; Services</fullName>
            </value>
            <value>
                <fullName>Mobile Operator</fullName>
            </value>
            <value>
                <fullName>MVNOs</fullName>
            </value>
            <value>
                <fullName>Next Gen</fullName>
            </value>
            <value>
                <fullName>OSP</fullName>
            </value>
            <value>
                <fullName>OTT/CDN</fullName>
            </value>
            <value>
                <fullName>Satellite Operator</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>SmartCity</fullName>
            </value>
            <value>
                <fullName>Smart City</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Wholesale Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>