244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__AccountPaymentType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountPaymentType__c</fullName>
    <description>The type of billing account such as Prepaid or Postpaid. Prepaid accounts pay up front for services and must top them up when balances are gone. Postpaid accounts are billed for services used at the end of each billing cycle. Part of the billing profile of a customer or billing account.</description>
    <label>Account Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepaid</fullName>
            </value>
            <value>
                <fullName>Postpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>