244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__Active__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Active__c</fullName>
    <description>Picklist that indicates whether the account is active or not. Shipped values are Yes and No. Additional active (or inactive) states can be added to the picklist as desired. For example, Suspended.</description>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>