244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__AutoPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AutoPaymentAmount__c</fullName>
    <description>Amount to be automatically paid each billing cycle if not the full amount owed. Part of the billing profile of a customer or billing account.</description>
    <label>Auto Payment Amount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Balance</fullName>
            </value>
            <value>
                <fullName>Minimum Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>