244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__AutoPaymentLimitAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AutoPaymentLimitAmount__c</fullName>
    <description>The upper amount on which an automatic payment should be processed for a given account</description>
    <label>Auto Payment Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>