244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__BillFormat__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BillFormat__c</fullName>
    <description>Specifies if customer recieves a detailed or summary bill</description>
    <label>Bill Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>