244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__BillingAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BillingAccountStatus__c</fullName>
    <description>Indicates the status of the customer billing account.</description>
    <label>Billing Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>In Collections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>