244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__Churn__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Churn__c</fullName>
    <description>Churn is a score used to predict the probability of a customer to leave and go to another carrier. Use this field to store the churn score calculated by your chosen analytics and prediction engine.</description>
    <label>Churn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>