244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__ContactPreferences__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ContactPreferences__c</fullName>
    <description>The preferred method (or methods) of communications to the parties of this account such as mail, email or phone.</description>
    <label>Contact Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eMail</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>