244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__CreditScore__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CreditScore__c</fullName>
    <description>The credit score of the account.</description>
    <label>Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>