244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__CustomerOfBrand__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CustomerOfBrand__c</fullName>
    <description>A brand or other legal entity of the energy/utility company.</description>
    <label>Customer Of</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>