244Initials/force-app/main/default/objects/Account/fields/vlocity_cmt__Disclosure1__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Disclosure1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this customer is a company that participates in foreign exchange transactions in the course of doing business. Primarily relevant to financial services organizations using Vlocity, but may also be relevant for credit checks.</description>
    <label>Foreign Exchange</label>
    <type>Checkbox</type>
</CustomField>